--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disney+ Hotstar Enhanced Popup Options</title>
     <link href="https://cdn.lazywasabi.net/fonts/IBMPlexSansThai/IBMPlexSansThai.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
